# polylayer-tee

./: Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/src/: canonical.rs  derive.rs  hyperliquid.rs  intents.rs  lib.rs  solana.rs
crates/core/src/clob/: auth.rs  headers.rs  mod.rs
crates/core/src/evm/: abi.rs  cctp.rs  mod.rs  permits.rs  polymarket_flows.rs  tx.rs
crates/core/src/jupiter/: decode.rs  mod.rs  sign.rs
crates/core/src/polymarket/: batch.rs  constants.rs  deposit_wallet.rs  mod.rs  sign.rs
crates/core/src/solana_attestor/: attestation.rs  delegate.rs  mod.rs  signer.rs
crates/nsm/: Cargo.toml
crates/nsm/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  error.rs  main.rs
crates/server/src/routes/: derive.rs  generic_session.rs  health.rs  hl_session.rs  jupiter_session.rs  mod.rs  polyleverage_session.rs  sign_clob_l2_headers.rs  sign_evm_tx.rs  sign_hl_bridge_permit.rs  sign_hyperliquid_order.rs  sign_jupiter_tx.rs  sign_link_message.rs  sign_polymarket_order.rs  sign_polymarket_wallet_batch.rs  sign_solana_liquidation.rs  sign_solana_price_twap.rs  sign_solana_resolution.rs
crates/storage/: Cargo.toml
crates/storage/src/: bootstrap.rs  cms_envelope.rs  config.rs  ddb.rs  kms.rs  lib.rs  s3.rs  session_crypto.rs  session_store.rs  vsock_creds.rs  vsock_transport.rs
crates/storage/src/cms_envelope/: ber_to_der.rs
