[package]
name        = "polylayer-tee-storage"
version     = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish.workspace      = true

[lib]
name = "polylayer_tee_storage"

# KMS-sealed mnemonic + S3 ciphertext + DDB encrypted session blobs.
# Speaks to AWS over the vsock-proxy on the parent EC2.
[dependencies]
tokio            = { workspace = true }
aws-config       = { workspace = true }
aws-sdk-kms      = { workspace = true }
aws-sdk-s3       = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-credential-types   = { workspace = true }
aws-smithy-runtime-api = { workspace = true }
aws-smithy-http-client = { workspace = true }
aws-smithy-types       = { workspace = true }

# Vsock + TLS for in-enclave network egress.
tokio-vsock      = { workspace = true }
hyper-util       = { workspace = true }
rustls           = { workspace = true }
tokio-rustls     = { workspace = true }
rustls-pki-types = { workspace = true }
webpki-roots     = { workspace = true }
tower-service    = { workspace = true }
http             = { workspace = true }
bytes            = { workspace = true }
futures-util     = { workspace = true }
pin-project-lite = { workspace = true }

serde            = { workspace = true }
serde_json       = { workspace = true }
hex              = { workspace = true }
base64           = { workspace = true }

tracing   = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
bip39     = { workspace = true }
rand_core = { workspace = true }
zeroize   = { workspace = true }

polylayer-tee-nsm = { path = "../nsm" }

# CMS EnvelopedData unwrap for KMS Decrypt-with-Recipient.
cms       = { workspace = true }
rsa       = { workspace = true }
aes       = { workspace = true }
cbc       = { workspace = true }
cipher    = { workspace = true }
aes-gcm   = { workspace = true }
pkcs8     = { workspace = true }
spki      = { workspace = true }
const-oid = { workspace = true }
der       = { workspace = true }
sha2      = { workspace = true }
